<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.com.example.android.courtcounter.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_top"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/layout_teamA"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_team_titleA"
                android:gravity="center"
                android:layout_margin="16dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily=" sans-serif-medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_a_score"
                android:text="@string/text_0_score"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily=" sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_3points_teamA"
                android:text="@string/button_3points"
                android:gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="add3pointsTeamA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_2points_teamA"
                android:text="@string/button_2points"
                android:gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="add2pointsTeamA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_1point_teamA"
                android:text="@string/button_freeshot"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="add1pointTeamA"/>

        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_team_titleB"
                android:gravity="center"
                android:layout_margin="16dp"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily=" sans-serif-medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_b_score"
                android:text="@string/text_0_score"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily=" sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_3points_teamB"
                android:text="@string/button_3points"
                android:gravity="center_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="add3pointsTeamB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_2points_teamB"
                android:text="@string/button_2points"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="add2pointsTeamB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_1point_teamB"
                android:text="@string/button_freeshot"
                android:gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="add1pointTeamB"/>

        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_reset"
            android:text="@string/button_reset"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="32dp"
            android:onClick="resetScores"/>
    </FrameLayout>
</LinearLayout>